# baron-xcc

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile_release  Jenkinsfile  LICENSE  README.md  rust-toolchain.toml
parachain/: Cargo.toml
primitives/: Cargo.toml
rpc/: Cargo.toml
scripts/: init.sh
