[workspace]
members = [
  "crates/*",
  "primitives",
  "parachain",
  "parachain/runtime/*",
  "rpc",
]

resolver = "2"

[profile.test]
incremental = false

[profile.dev]
incremental = false

[profile.release]
incremental = false

[patch."https://github.com/paritytech/substrate"]
branch = "polkadot-v1.0.0"
default-features = false

[patch."https://github.com/paritytech/polkadot"]
branch = "release-v1.0.0"
default-features = false

[patch."https://github.com/paritytech/cumulus"]
branch = "polkadot-v1.0.0"
default-features = false

[patch."https://github.com/open-web3-stack/open-runtime-module-library"]
rev = "f7c8b38cdc0fa6dddf915a20d2ccf6ae4ad5cac5"
default-features = false

[patch."https://github.com/paritytech/frontier"]
branch = "polkadot-v1.0.0"
default-features = false

[patch."https://github.com/paritytech/substrate".dependencies]
binary-merkle-tree = { git = "https://github.com/paritytech/substrate" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate" }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate" }
frame-executive = { git = "https://github.com/paritytech/substrate" }
frame-remote-externalities = { git = "https://github.com/paritytech/substrate" }
frame-support = { git = "https://github.com/paritytech/substrate" }
frame-support-procedural = { git = "https://github.com/paritytech/substrate" }
frame-support-procedural-tools = { git = "https://github.com/paritytech/substrate" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech/substrate" }
frame-system = { git = "https://github.com/paritytech/substrate" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate" }
frame-try-runtime = { git = "https://github.com/paritytech/substrate" }
mmr-gadget = { git = "https://github.com/paritytech/substrate" }
mmr-rpc = { git = "https://github.com/paritytech/substrate" }
# Add all other dependencies from the original [patch."https://github.com/paritytech/substrate"] section here

[patch."https://github.com/paritytech/polkadot".dependencies]
kusama-runtime = { git = "https://github.com/paritytech/polkadot" }
kusama-runtime-constants = { git = "https://github.com/paritytech/polkadot" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot" }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech/polkadot" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot" }
polkadot-network-bridge = { git = "https://github.com/paritytech/polkadot" }
# Add all other dependencies from the original [patch."https://github.com/paritytech/polkadot"] section here

[patch."https://github.com/paritytech/cumulus".dependencies]
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus" }
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus" }
# Add all other dependencies from the original [patch."https://github.com/paritytech/cumulus"] section here

[patch."https://github.com/open-web3-stack/open-runtime-module-library".dependencies]
orml-asset-registry = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-oracle = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library" }
# Add all other dependencies from the original [patch."https://github.com/open-web3-stack/open-runtime-module-library"] section here

[patch."https://github.com/paritytech/frontier".dependencies]
fc-consensus = { git = "https://github.com/paritytech/frontier" }
fc-db = { git = "https://github.com/paritytech/frontier" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier" }
fc-rpc = { git = "https://github.com/paritytech/frontier" }
# Add all other dependencies from the original [patch."https://github.com/paritytech/frontier"] section here
